--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -21,6 +21,7 @@
   background-color: rgb(175, 175, 175);
   text-align: center;
   /* font-family: 'GnraleStationExtended'; */
+  font-family: 'Monoton', cursive;
   font-weight: normal;
   font-size: 28px;
   font-style: normal;
