--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -17,7 +17,7 @@
 .header {
   border: solid 2px white;
   border-bottom: none;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   background-color: rgb(175, 175, 175);
   text-align: center;
   /* font-family: 'GnraleStationExtended'; */
