--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -4,6 +4,55 @@
   /* max-width: 750px; */
 }
 
+
+.container {
+  max-width: 100%;
+  min-height: 100vh;
+  background-color: red;
+  background-image: url("/background-berry.jpg");
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  /* background-color: red; */
+  border: solid 1px black;
+  min-height: 95px;
+}
+
+.center {
+  /* background-color: rgb(255, 255, 255);
+  border: solid 1px black; */
+  display: flex;
+  flex: 1 1 auto;
+}
+
+.messages-box{
+  background-color: white;
+  /* height: 100%; */
+  /* width: 70%; */
+}
+
+
+.users-box {
+  background-color: black;
+  /* height: 100%; */
+  /* width: 30%; */
+  /* resize: horizontal; */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 .Container {
   max-width: 100%;
   min-height: 100vh;
