--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -1,95 +1,77 @@
 .Layout {
   text-align: center;
-  /* display: flex; */
-  /* max-width: 750px; */
 }
-
 
 .container {
   max-width: 100%;
   min-height: 100vh;
-  background-color: red;
-  background-image: url("/background-berry.jpg");
+  background-color: #CED0CF;
   display: flex;
   flex-direction: column;
+  border: solid 2px rgb(160, 160, 160);
 }
 
 .row {
-  /* background-color: red; */
-  border: solid 1px black;
   min-height: 95px;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header h1 {
+  margin: 0 25px;
+  font-family: 'Monoton', cursive;
+  font-size: 42px;
+  /* font-family: 'Press Start 2P', cursive;
+  font-size: 24px;
+  font-weight: bold; */
+}
+
+.ads {
+  margin: 0 25px;
+  height: 80px;
+  flex-grow: 1;
+  background-image: url("/background-berry.jpg"); 
+  border-top: solid 2px rgb(160, 160, 160);
+  border-left: solid 2px rgb(160, 160, 160);
+  border-bottom: solid 1px white;
+  border-right: solid 1px white;
+  display: flex;
+  align-items: center;
+  font-size: 38px;
+  font-family: 'Press Start 2P', cursive;
+  /* text-align: center; */
+  /* text-anchor: middle; */
+}
+
 .center {
-  /* background-color: rgb(255, 255, 255);
-  border: solid 1px black; */
+  margin: 0 25px;
   display: flex;
   flex: 1 1 auto;
 }
 
-.messages-box{
-  background-color: white;
-  /* height: 100%; */
-  /* width: 70%; */
+.messages-box {
+  border-top: solid 2px rgb(160, 160, 160);
+  border-left: solid 2px rgb(160, 160, 160);
+  border-bottom: solid 1px white;
+  border-right: solid 1px white;
+  background-color: #CED0CF;
 }
-
 
 .users-box {
-  background-color: black;
-  /* height: 100%; */
-  /* width: 30%; */
-  /* resize: horizontal; */
+  border-top: solid 2px rgb(160, 160, 160);
+  border-left: solid 2px rgb(160, 160, 160);
+  border-bottom: solid 1px white;
+  border-right: solid 1px white;
+  background-color: #CED0CF;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-.Container {
-  max-width: 100%;
-  min-height: 100vh;
-  background-color: black;
+.footer{
+  margin: 0 25px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
-/* .Row {
- 
-} */
-
-.header {
-  border: solid 2px white;
-  border-bottom: none;
-  /* margin-top: 50px; */
-  background-color: rgb(175, 175, 175);
-  text-align: center;
-  /* font-family: 'GnraleStationExtended'; */
-  font-family: 'Monoton', cursive;
-  font-weight: normal;
-  font-size: 28px;
-  font-style: normal;
-}
-
-.chat-window {
-  border: solid 2px white;
-  border-bottom: none;
-  background-color: rgb(175, 175, 175);
-  min-height: 500px;
-  padding: 20px;
-}
-
-.input-zone{
-  border: solid 2px white;
-  background-color: rgb(175, 175, 175);
-}
-
-/* .chat-window-inner {
-  background-color: white;
-  height: 100%;
-} */
