--- a/src/Components/InputZone/InputZone.module.css
+++ b/src/Components/InputZone/InputZone.module.css
@@ -15,3 +15,21 @@
 .InputZone :last-child {
   margin-right: 0;
 }
+
+.InputZone button {
+  box-shadow: inset -1px -1px 0px 0px rgba(0, 0, 0, 0.44);
+  border-top: solid 2px rgb(255, 255, 255);
+  border-left: solid 2px rgb(255, 255, 255);
+  border-right: solid 2px rgb(90, 90, 90);
+  border-bottom: solid 2px rgb(90, 90, 90);
+  background-color: #CED0CF;
+ }
+
+ .InputZone input {
+  box-shadow: inset -1px -1px 0px 0px rgba(0, 0, 0, 0.44);
+  border-bottom: solid 2px rgb(255, 255, 255);
+  border-right: solid 2px rgb(255, 255, 255);
+  border-left: solid 2px rgb(90, 90, 90);
+  border-top: solid 2px rgb(90, 90, 90);
+  padding: 0 5px;
+ }
