--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -15,29 +15,20 @@
   min-height: 95px;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .center {
   margin: 0 25px;
   display: flex;
   flex: 1 1 auto;
 }
 
-.messages-box {
-  border-top: solid 2px rgb(160, 160, 160);
-  border-left: solid 2px rgb(160, 160, 160);
-  border-bottom: solid 1px white;
-  border-right: solid 1px white;
-  background-color: #CED0CF;
-}
-
-.users-box {
-  border-top: solid 2px rgb(160, 160, 160);
-  border-left: solid 2px rgb(160, 160, 160);
-  border-bottom: solid 1px white;
-  border-right: solid 1px white;
-  background-color: #CED0CF;
-}
-
 .footer {
+  min-height: 60px;
   margin: 0 25px;
   display: flex;
   align-items: center;
