--- a/src/layouts/MainLayout/MainLayout.module.css
+++ b/src/layouts/MainLayout/MainLayout.module.css
@@ -34,3 +34,64 @@
   align-items: center;
   justify-content: space-between;
 }
+
+
+.scanlines {
+  position: relative;
+  overflow: hidden;
+}
+
+.scanlines:before,
+.scanlines:after {
+  display: block;
+  pointer-events: none;
+  content: '';
+  position: absolute;
+}
+
+.scanlines:before {
+  /* width: 100%; */
+  /* height: 50px; */
+  /* z-index: 100; */
+  /* background: rgba(0, 0, 0, 0.3);
+  opacity: 0.75; */
+  /* -webkit-animation: scanline 6s linear infinite; */
+  /* animation: scanline 6s linear infinite; */
+}
+
+.scanlines:after {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  /* z-index: 99; */
+  background: linear-gradient(to bottom, transparent 80%, rgba(16, 87, 54, 0.3) 25%);
+  background-size: 100% 4px;
+  /* -webkit-animation: scanlines 1s steps(60) infinite; */
+  animation: scanlines 1s steps(60) infinite;
+}
+
+/* ANIMATE UNIQUE SCANLINE */
+/* @-webkit-keyframes scanline {
+  0% {
+    -webkit-transform: translate3d(0, 200000%, 0);
+            transform: translate3d(0, 200000%, 0);
+  }
+}
+@keyframes scanline {
+  0% {
+    -webkit-transform: translate3d(0, 200000%, 0);
+            transform: translate3d(0, 200000%, 0);
+  }
+} */
+/* @-webkit-keyframes scanlines {
+  0% {
+    background-position: 0 50%;
+  }
+} */
+
+@keyframes scanlines {
+  0% {
+    background-position: 0 50%;
+  }
+}
