--- a/src/components/LoggedUserFooter/LoggedUserFooter.module.css
+++ b/src/components/LoggedUserFooter/LoggedUserFooter.module.css
@@ -21,3 +21,20 @@ justify-content: space-between;
 .Input {
   flex-grow: 1;
 }
+
+.Input-red {
+  animation-name: emptyinput;
+  animation-duration: 1s;
+}
+
+@keyframes emptyinput {
+  0%,
+  100% {
+    outline: 2px solid rgba(255, 0, 0, 0);
+  }
+
+  50% {
+    /* color: red; */
+    outline: 2px solid red;
+  }
+}
