--- a/src/components/UnloggedUserFooter/UnloggedUserFooter.module.css
+++ b/src/components/UnloggedUserFooter/UnloggedUserFooter.module.css
@@ -6,3 +6,21 @@
 .UnloggedUserFooter :first-child {
   margin: 10px;
 }
+
+
+.Input-red {
+  animation-name: emptyinput;
+  animation-duration: 1s;
+}
+
+@keyframes emptyinput {
+  0%,
+  100% {
+    outline: 2px solid rgba(255, 0, 0, 0);
+  }
+
+  50% {
+    /* color: red; */
+    outline: 2px solid red;
+  }
+}
